--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     font-family: verdana;
 }
-.title { /*"Sua média"*/
+h1 { /*"Sua média"*/
     color: #f0ce00;
     text-align: center;
-    font-size: 20pt;
+    font-size: 40pt;
     -webkit-text-stroke: 1px #211915;
 }
 .subt { /*"Sua média de pontos no ENEM está boa em relação à nota de corte do curso desejado?"*/
@@ -13,16 +13,10 @@ body {
     font-size: 20pt;
     -webkit-text-stroke: 0.5px #211915;
 }
-.publi {
-    text-align: center;
-    color: #211915;
-}
-.imgdiv { /*Style da div da logo do ENEM*/
+.imgstyle { /*Style da div da logo do ENEM*/
     position: fixed;
     right: 0.5%;
     top: 2%;
-}
-img { /*"Logo do ENEM"*/
     max-width: 150px;
 }
 button { /*"Clique aqui para calcular"*/
